# lfp-importmap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/lfp_importmap/: utils.py
src/lfp_importmap/management/commands/: importmap.py
src/sonic_importmap/: __init__.py  apps.py  utils.py
src/sonic_importmap/management/commands/: importmap.py
src/sonic_importmap/templates/: javascript_importmap_tags.html
src/sonic_importmap/templatetags/: sonic_importmap.py
tests/: conftest.py  test_commands.py  test_templatetags.py  test_utils.py
