[project]
name = "sonic-importmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sarthak Jariwala", email = "sarthakjariwala@fastmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "django-typer[rich]>=2.4.0",
    "django>=4.2.16",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
